# eReader

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  eReader.spec  generate_icon.py  profile_epub.py  profile_init.py  pyproject.toml  replace_icon.py  requirements.txt
src/: app.py  icons.py  main.py  utils.py
src/annotations/: annotation_widget.py  bookmark_manager.py
src/models/: annotation.py  book.py  database.py
src/readers/: epub_reader.py  reader_widget.py
src/settings/: settings.py  settings_repository.py  settings_widget.py  theme_manager.py  themes.py
tests/: test_annotation_model.py  test_annotation_widget.py  test_book_model.py  test_database.py  test_epub_reader.py  test_import_handler.py  test_reader_widget.py  test_settings.py  test_settings_repository.py  test_utils.py
