[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ereader"
version = "1.0.0"
description = "A simplified iBooks-like EPUB reader for Windows"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.6",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-qt>=4.2",
]

[project.scripts]
ereader = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
include = ["src*"]
